# text-editor

./: .flake8  app.py  controller.py  demo.docx  main.py  model.py  pyproject.toml  readme.md  view.py
plugins/: base_plugin.py  stats_plugin.py
